--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@ accordingly
 
   <modules>
     <module>student</module>
+    <module>phonebill</module>
   </modules>
 
   <inceptionYear>2020</inceptionYear>
