--- a/phonebill-web/pom.xml
+++ b/phonebill-web/pom.xml
@@ -156,6 +156,9 @@
         <configuration>
           <archive>
             <manifest>
+              <addClasspath>true</addClasspath>
+              <classpathLayoutType>repository</classpathLayoutType>
+              <classpathPrefix>${user.home}/.m2/repository</classpathPrefix>
               <mainClass>edu.pdx.cs410J.whitlock.Project4</mainClass>
             </manifest>
           </archive>
