Added a project for figuring out how to get Swagger to work with a web application that implements a REST API with RestEasy and Guice

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@ accordingly
     <module>phonebill</module>
     <module>koans</module>
     <module>phonebill-web</module>
+    <module>resteasy-guice-swagger</module>
   </modules>
 
   <inceptionYear>2020</inceptionYear>
