--- a/resteasy-guice-swagger/pom.xml
+++ b/resteasy-guice-swagger/pom.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <parent>
-    <artifactId>CS410J</artifactId>
-    <groupId>edu.pdx.cs410J</groupId>
-    <version>Summer2020</version>
-  </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.pdx.cs410J.whitlock</groupId>
   <artifactId>resteasy-guice-swagger</artifactId>
 
   <properties>
+    <maven.compiler.source>10</maven.compiler.source>
+    <maven.compiler.target>10</maven.compiler.target>
+    <junit.version>4.13</junit.version>
+    <hamcrest.version>2.2</hamcrest.version>
+    <mockito.version>3.2.4</mockito.version>
+    <surefire.version>3.0.0-M4</surefire.version>
     <jetty.http.port>8080</jetty.http.port>
     <guice.version>4.1.0</guice.version>
     <resteasy.version>3.0.2.Final</resteasy.version>
+    <swagger.version>2.0.2</swagger.version>
+    <swagger-ui.version>3.17.0</swagger-ui.version>
+    <replacer.version>1.5.3</replacer.version>
+    <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
+    <maven-war-plugin.version>3.2.2</maven-war-plugin.version>
   </properties>
 
   <packaging>war</packaging>
@@ -103,10 +109,101 @@
       <artifactId>resteasy-guice</artifactId>
       <version>${resteasy.version}</version>
     </dependency>
+    <dependency>
+        <groupId>io.swagger.core.v3</groupId>
+        <artifactId>swagger-jaxrs2</artifactId>
+        <version>${swagger.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>io.swagger.core.v3</groupId>
+        <artifactId>swagger-jaxrs2-servlet-initializer</artifactId>
+        <version>${swagger.version}</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>phonebill</finalName>  <!-- Need finalName to make integration tests work -->
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.eclipse.jetty</groupId>
+          <artifactId>jetty-maven-plugin</artifactId>
+          <version>9.4.18.v20190429</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>${maven.compiler.source}</source>
+          <target>${maven.compiler.target}</target>
+        </configuration>
+      </plugin>
+      <plugin>
+          <!-- Download Swagger UI webjar. -->
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>${maven-dependency-plugin.version}</version>
+          <executions>
+              <execution>
+                  <phase>prepare-package</phase>
+                  <goals>
+                      <goal>unpack</goal>
+                  </goals>
+                  <configuration>
+                      <artifactItems>
+                          <artifactItem>
+                              <groupId>org.webjars</groupId>
+                              <artifactId>swagger-ui</artifactId>
+                              <version>${swagger-ui.version}</version>
+                          </artifactItem>
+                      </artifactItems>
+                      <outputDirectory>${project.build.directory}/swagger-ui</outputDirectory>
+                  </configuration>
+              </execution>
+          </executions>
+      </plugin>
+      <plugin>
+          <!-- Add Swagger UI resources to the war file. -->
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>${maven-war-plugin.version}</version>
+          <configuration>
+              <webResources combine.children="append">
+                  <resource>
+                      <directory>${project.build.directory}/swagger-ui/META-INF/resources/webjars/swagger-ui/${swagger-ui.version}</directory>
+                      <includes>
+                          <include>**/*.*</include>
+                      </includes>
+                      <targetPath>swagger-ui</targetPath>
+                  </resource>
+              </webResources>
+          </configuration>
+      </plugin>
+      <plugin>
+          <!-- Replace the OpenAPI specification example URL with the local one. -->
+          <groupId>com.google.code.maven-replacer-plugin</groupId>
+          <artifactId>replacer</artifactId>
+          <version>${replacer.version}</version>
+          <executions>
+              <execution>
+                  <phase>prepare-package</phase>
+                  <goals>
+                      <goal>replace</goal>
+                  </goals>
+              </execution>
+          </executions>
+          <configuration>
+              <file>${project.build.directory}/swagger-ui/META-INF/resources/webjars/swagger-ui/${swagger-ui.version}/index.html</file>
+              <replacements>
+                  <replacement>
+                      <token>http://petstore.swagger.io/v2/swagger.json</token>
+                      <value>/phonebill/openapi.json</value>
+                  </replacement>
+              </replacements>
+          </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
